examples/invalid/private_module.atom
module invalid.private_module;

class exampleClass {}

fn exampleFn() {}
